function(ob_unittest case)
  if(ARGC EQUAL 1)
    add_executable(${case} ${case}.cpp)
  else()
    add_executable(${ARGV})
  endif()
  if (case MATCHES "^test_.*")
    add_test(${case} ${case})
  endif()
  target_link_libraries(${case} PRIVATE oceanbase gtest gmock)
  disable_pch(${case})
  target_include_directories(${case}
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/unittest ${CMAKE_SOURCE_DIR}/deps/oblib/unittest ${DEP_DIR}/include)
endfunction()

file(COPY . DESTINATION . FILES_MATCHING PATTERN "*.test")
file(COPY . DESTINATION . FILES_MATCHING PATTERN "*.sql")
file(COPY . DESTINATION . FILES_MATCHING PATTERN "*.result")
file(COPY . DESTINATION . FILES_MATCHING PATTERN "*.schema")
file(COPY run_tests.sh DESTINATION .)

add_subdirectory(sql)
add_subdirectory(backup)
add_subdirectory(archive)
add_subdirectory(clog)
add_subdirectory(storage)
add_subdirectory(election)
add_subdirectory(observer)
add_subdirectory(share)
add_subdirectory(rootserver)
